Interpretor_Python_fix/Interpretor_Python/y.output
Terminals unused in grammar

    FUNCTION
    RETURN
    TAB


State 45 conflicts: 10 shift/reduce
State 46 conflicts: 10 shift/reduce
State 47 conflicts: 10 shift/reduce
State 48 conflicts: 10 shift/reduce
State 49 conflicts: 10 shift/reduce
State 50 conflicts: 10 shift/reduce
State 52 conflicts: 10 shift/reduce
State 53 conflicts: 10 shift/reduce
State 54 conflicts: 10 shift/reduce
State 55 conflicts: 10 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements
    2        | ε

    3 statements: statement NEWLINE
    4           | statements statement NEWLINE

    5 statement: assignment
    6          | while_statement
    7          | for_statement
    8          | print_statement
    9          | if_statement
   10          | END

   11 assignment: NAME ASSIGN expression

   12 if_statement: IF expression COLON NEWLINE INDENT statements DEDENT END
   13             | IF expression COLON NEWLINE INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT END
   14             | IF expression COLON NEWLINE INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT if_statement

   15 print_statement: PRINT LPAREN STRING RPAREN
   16                | PRINT LPAREN expression RPAREN

   17 while_statement: WHILE expression COLON NEWLINE INDENT statements DEDENT END

   18 for_statement: FOR NAME IN RANGE LPAREN expression COMMA expression RPAREN COLON NEWLINE INDENT statements DEDENT

   19 expression: expression PLUS expression
   20           | expression MINUS expression
   21           | expression TIMES expression
   22           | expression DIVIDE expression
   23           | LPAREN expression RPAREN
   24           | NAME
   25           | NUMBER
   26           | expression LT expression
   27           | expression GT expression
   28           | expression LE expression
   29           | expression GE expression
   30           | expression EQ expression
   31           | expression NE expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    STRING <string> (258) 15
    NUMBER <num> (259) 25
    NAME <string> (260) 11 18 24
    END (261) 10 12 13 17
    ASSIGN (262) 11
    LT (263) 26
    GT (264) 27
    LE (265) 28
    GE (266) 29
    EQ (267) 30
    NE (268) 31
    IF (269) 12 13 14
    ELSE (270) 13 14
    WHILE (271) 17
    PRINT (272) 15 16
    FUNCTION (273)
    RETURN (274)
    LPAREN (275) 15 16 18 23
    RPAREN (276) 15 16 18 23
    COLON (277) 12 13 14 17 18
    COMMA (278) 18
    FOR (279) 18
    IN (280) 18
    PLUS (281) 19
    MINUS (282) 20
    TIMES (283) 21
    DIVIDE (284) 22
    RANGE (285) 18
    NEWLINE (286) 3 4 12 13 14 17 18
    INDENT (287) 12 13 14 17 18
    DEDENT (288) 12 13 14 17 18
    TAB (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    program (36)
        on left: 1 2
        on right: 0
    statements <statement> (37)
        on left: 3 4
        on right: 1 4 12 13 14 17 18
    statement <statement> (38)
        on left: 5 6 7 8 9 10
        on right: 3 4
    assignment (39)
        on left: 11
        on right: 5
    if_statement (40)
        on left: 12 13 14
        on right: 9 14
    print_statement (41)
        on left: 15 16
        on right: 8
    while_statement <statement> (42)
        on left: 17
        on right: 6
    for_statement <statement> (43)
        on left: 18
        on right: 7
    expression <expression> (44)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 11 12 13 14 16 17 18 19 20 21 22 23 26 27 28 29 30 31


State 0

    0 $accept: • program $end

    NAME   shift, and go to state 1
    END    shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    PRINT  shift, and go to state 5
    FOR    shift, and go to state 6

    $default  reduce using rule 2 (program)

    program          go to state 7
    statements       go to state 8
    statement        go to state 9
    assignment       go to state 10
    if_statement     go to state 11
    print_statement  go to state 12
    while_statement  go to state 13
    for_statement    go to state 14


State 1

   11 assignment: NAME • ASSIGN expression

    ASSIGN  shift, and go to state 15


State 2

   10 statement: END •

    $default  reduce using rule 10 (statement)


State 3

   12 if_statement: IF • expression COLON NEWLINE INDENT statements DEDENT END
   13             | IF • expression COLON NEWLINE INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT END
   14             | IF • expression COLON NEWLINE INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT if_statement

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 19


State 4

   17 while_statement: WHILE • expression COLON NEWLINE INDENT statements DEDENT END

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 20


State 5

   15 print_statement: PRINT • LPAREN STRING RPAREN
   16                | PRINT • LPAREN expression RPAREN

    LPAREN  shift, and go to state 21


State 6

   18 for_statement: FOR • NAME IN RANGE LPAREN expression COMMA expression RPAREN COLON NEWLINE INDENT statements DEDENT

    NAME  shift, and go to state 22


State 7

    0 $accept: program • $end

    $end  shift, and go to state 23


State 8

    1 program: statements •
    4 statements: statements • statement NEWLINE

    NAME   shift, and go to state 1
    END    shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    PRINT  shift, and go to state 5
    FOR    shift, and go to state 6

    $default  reduce using rule 1 (program)

    statement        go to state 24
    assignment       go to state 10
    if_statement     go to state 11
    print_statement  go to state 12
    while_statement  go to state 13
    for_statement    go to state 14


State 9

    3 statements: statement • NEWLINE

    NEWLINE  shift, and go to state 25


State 10

    5 statement: assignment •

    $default  reduce using rule 5 (statement)


State 11

    9 statement: if_statement •

    $default  reduce using rule 9 (statement)


State 12

    8 statement: print_statement •

    $default  reduce using rule 8 (statement)


State 13

    6 statement: while_statement •

    $default  reduce using rule 6 (statement)


State 14

    7 statement: for_statement •

    $default  reduce using rule 7 (statement)


State 15

   11 assignment: NAME ASSIGN • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 26


State 16

   25 expression: NUMBER •

    $default  reduce using rule 25 (expression)


State 17

   24 expression: NAME •

    $default  reduce using rule 24 (expression)


State 18

   23 expression: LPAREN • expression RPAREN

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 27


State 19

   12 if_statement: IF expression • COLON NEWLINE INDENT statements DEDENT END
   13             | IF expression • COLON NEWLINE INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT END
   14             | IF expression • COLON NEWLINE INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT if_statement
   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    COLON   shift, and go to state 34
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38


State 20

   17 while_statement: WHILE expression • COLON NEWLINE INDENT statements DEDENT END
   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    COLON   shift, and go to state 39
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38


State 21

   15 print_statement: PRINT LPAREN • STRING RPAREN
   16                | PRINT LPAREN • expression RPAREN

    STRING  shift, and go to state 40
    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 41


State 22

   18 for_statement: FOR NAME • IN RANGE LPAREN expression COMMA expression RPAREN COLON NEWLINE INDENT statements DEDENT

    IN  shift, and go to state 42


State 23

    0 $accept: program $end •

    $default  accept


State 24

    4 statements: statements statement • NEWLINE

    NEWLINE  shift, and go to state 43


State 25

    3 statements: statement NEWLINE •

    $default  reduce using rule 3 (statements)


State 26

   11 assignment: NAME ASSIGN expression •
   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    $default  reduce using rule 11 (assignment)


State 27

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   23           | LPAREN expression • RPAREN
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    RPAREN  shift, and go to state 44
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38


State 28

   26 expression: expression LT • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 45


State 29

   27 expression: expression GT • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 46


State 30

   28 expression: expression LE • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 47


State 31

   29 expression: expression GE • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 48


State 32

   30 expression: expression EQ • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 49


State 33

   31 expression: expression NE • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 50


State 34

   12 if_statement: IF expression COLON • NEWLINE INDENT statements DEDENT END
   13             | IF expression COLON • NEWLINE INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT END
   14             | IF expression COLON • NEWLINE INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT if_statement

    NEWLINE  shift, and go to state 51


State 35

   19 expression: expression PLUS • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 52


State 36

   20 expression: expression MINUS • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 53


State 37

   21 expression: expression TIMES • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 54


State 38

   22 expression: expression DIVIDE • expression

    NUMBER  shift, and go to state 16
    NAME    shift, and go to state 17
    LPAREN  shift, and go to state 18

    expression  go to state 55


State 39

   17 while_statement: WHILE expression COLON • NEWLINE INDENT statements DEDENT END

    NEWLINE  shift, and go to state 56


State 40

   15 print_statement: PRINT LPAREN STRING • RPAREN

    RPAREN  shift, and go to state 57


State 41

   16 print_statement: PRINT LPAREN expression • RPAREN
   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    RPAREN  shift, and go to state 58
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38


State 42

   18 for_statement: FOR NAME IN • RANGE LPAREN expression COMMA expression RPAREN COLON NEWLINE INDENT statements DEDENT

    RANGE  shift, and go to state 59


State 43

    4 statements: statements statement NEWLINE •

    $default  reduce using rule 4 (statements)


State 44

   23 expression: LPAREN expression RPAREN •

    $default  reduce using rule 23 (expression)


State 45

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   26           | expression LT expression •
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 26 (expression)]
    GT        [reduce using rule 26 (expression)]
    LE        [reduce using rule 26 (expression)]
    GE        [reduce using rule 26 (expression)]
    EQ        [reduce using rule 26 (expression)]
    NE        [reduce using rule 26 (expression)]
    PLUS      [reduce using rule 26 (expression)]
    MINUS     [reduce using rule 26 (expression)]
    TIMES     [reduce using rule 26 (expression)]
    DIVIDE    [reduce using rule 26 (expression)]
    $default  reduce using rule 26 (expression)


State 46

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   27           | expression GT expression •
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 27 (expression)]
    GT        [reduce using rule 27 (expression)]
    LE        [reduce using rule 27 (expression)]
    GE        [reduce using rule 27 (expression)]
    EQ        [reduce using rule 27 (expression)]
    NE        [reduce using rule 27 (expression)]
    PLUS      [reduce using rule 27 (expression)]
    MINUS     [reduce using rule 27 (expression)]
    TIMES     [reduce using rule 27 (expression)]
    DIVIDE    [reduce using rule 27 (expression)]
    $default  reduce using rule 27 (expression)


State 47

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   28           | expression LE expression •
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 28 (expression)]
    GT        [reduce using rule 28 (expression)]
    LE        [reduce using rule 28 (expression)]
    GE        [reduce using rule 28 (expression)]
    EQ        [reduce using rule 28 (expression)]
    NE        [reduce using rule 28 (expression)]
    PLUS      [reduce using rule 28 (expression)]
    MINUS     [reduce using rule 28 (expression)]
    TIMES     [reduce using rule 28 (expression)]
    DIVIDE    [reduce using rule 28 (expression)]
    $default  reduce using rule 28 (expression)


State 48

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   29           | expression GE expression •
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 29 (expression)]
    GT        [reduce using rule 29 (expression)]
    LE        [reduce using rule 29 (expression)]
    GE        [reduce using rule 29 (expression)]
    EQ        [reduce using rule 29 (expression)]
    NE        [reduce using rule 29 (expression)]
    PLUS      [reduce using rule 29 (expression)]
    MINUS     [reduce using rule 29 (expression)]
    TIMES     [reduce using rule 29 (expression)]
    DIVIDE    [reduce using rule 29 (expression)]
    $default  reduce using rule 29 (expression)


State 49

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   30           | expression EQ expression •
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 30 (expression)]
    GT        [reduce using rule 30 (expression)]
    LE        [reduce using rule 30 (expression)]
    GE        [reduce using rule 30 (expression)]
    EQ        [reduce using rule 30 (expression)]
    NE        [reduce using rule 30 (expression)]
    PLUS      [reduce using rule 30 (expression)]
    MINUS     [reduce using rule 30 (expression)]
    TIMES     [reduce using rule 30 (expression)]
    DIVIDE    [reduce using rule 30 (expression)]
    $default  reduce using rule 30 (expression)


State 50

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression
   31           | expression NE expression •

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 31 (expression)]
    GT        [reduce using rule 31 (expression)]
    LE        [reduce using rule 31 (expression)]
    GE        [reduce using rule 31 (expression)]
    EQ        [reduce using rule 31 (expression)]
    NE        [reduce using rule 31 (expression)]
    PLUS      [reduce using rule 31 (expression)]
    MINUS     [reduce using rule 31 (expression)]
    TIMES     [reduce using rule 31 (expression)]
    DIVIDE    [reduce using rule 31 (expression)]
    $default  reduce using rule 31 (expression)


State 51

   12 if_statement: IF expression COLON NEWLINE • INDENT statements DEDENT END
   13             | IF expression COLON NEWLINE • INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT END
   14             | IF expression COLON NEWLINE • INDENT statements DEDENT ELSE COLON NEWLINE INDENT statements DEDENT if_statement

    INDENT  shift, and go to state 60


State 52

   19 expression: expression • PLUS expression
   19           | expression PLUS expression •
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 19 (expression)]
    GT        [reduce using rule 19 (expression)]
    LE        [reduce using rule 19 (expression)]
    GE        [reduce using rule 19 (expression)]
    EQ        [reduce using rule 19 (expression)]
    NE        [reduce using rule 19 (expression)]
    PLUS      [reduce using rule 19 (expression)]
    MINUS     [reduce using rule 19 (expression)]
    TIMES     [reduce using rule 19 (expression)]
    DIVIDE    [reduce using rule 19 (expression)]
    $default  reduce using rule 19 (expression)


State 53

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   20           | expression MINUS expression •
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 20 (expression)]
    GT        [reduce using rule 20 (expression)]
    LE        [reduce using rule 20 (expression)]
    GE        [reduce using rule 20 (expression)]
    EQ        [reduce using rule 20 (expression)]
    NE        [reduce using rule 20 (expression)]
    PLUS      [reduce using rule 20 (expression)]
    MINUS     [reduce using rule 20 (expression)]
    TIMES     [reduce using rule 20 (expression)]
    DIVIDE    [reduce using rule 20 (expression)]
    $default  reduce using rule 20 (expression)


State 54

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   21           | expression TIMES expression •
   22           | expression • DIVIDE expression
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38

    LT        [reduce using rule 21 (expression)]
    GT        [reduce using rule 21 (expression)]
    LE        [reduce using rule 21 (expression)]
    GE        [reduce using rule 21 (expression)]
    EQ        [reduce using rule 21 (expression)]
    NE        [reduce using rule 21 (expression)]
    PLUS      [reduce using rule 21 (expression)]
    MINUS     [reduce using rule 21 (expression)]
    TIMES     [reduce using rule 21 (expression)]
    DIVIDE    [reduce using rule 21 (expression)]
    $default  reduce using rule 21 (expression)


State 55

   19 expression: expression • PLUS expression
   20           | expression • MINUS expression
   21           | expression • TIMES expression
   22           | expression • DIVIDE expression
   22           | expression DIVIDE expression •
   26           | expression • LT expression
   27           | expression • GT expression
   28           | expression • LE expression
   29           | expression • GE expression
   30           | expression • EQ expression
   31           | expression • NE expression

    LT      shift, and go to state 28
    GT      shift, and go to state 29
    LE      shift, and go to state 30
    GE      shift, and go to state 31
    EQ      shift, and go to state 32
    NE      shift, and go to state 33
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
